feat: added items api methods
