# src/main/java/meemo/campaign/service/controller/ItemApiController.java
@@ -1,0 +1,13 @@
+package meemo.campaign.service.controller;
+
+import lombok.extern.slf4j.Slf4j;
+import meemo.api.ItemsApi;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RestController;
+
+@RestController
+@RequestMapping("/v1")
+@Slf4j
+public class ItemApiController implements ItemsApi {
+
+}
