# src/main/resources/api.yaml
@@ -14,6 +14,9 @@ info:
 tags:
   - name: campaign
     description: Operations about campaign
+  - name: item
+    description: Operations about items of a campaign
+
 paths:
   /campaigns:
     get:
@@ -32,7 +35,7 @@ paths:
         - campaign
       responses:
         default:
-          $ref: '#/components/responses/CampaignGetResponse'
+          $ref: '#/components/responses/ErrorResponse'
     post:
       summary: 'Create campaign'
       description: ''
@@ -48,7 +51,6 @@ paths:
         default:
           description: Unexpected error
           $ref: '#/components/responses/ErrorResponse'
-
   /campaigns/{campaignId}:
     get:
       summary: 'Get campaign details'
@@ -81,9 +83,9 @@ paths:
         - campaign
       responses:
         default:
-          $ref: '#/components/responses/CampaignGetResponse'
+          $ref: '#/components/responses/ErrorResponse'
     delete:
-      summary: 'Delete campaign details'
+      summary: 'Delete campaign'
       description: ''
       parameters:
         - name: campaignId
@@ -97,28 +99,110 @@ paths:
         - campaign
       responses:
         default:
-          $ref: '#/components/responses/CampaignGetResponse'
+          $ref: '#/components/responses/ErrorResponse'
+  /campaigns/{campaignId}/archive:
+    post:
+      summary: 'Move campaign to archive'
+      description: ''
+      parameters:
+        - name: campaignId
+          in: path
+          description: Unique campaign identifier
+          required: true
+          schema:
+            type: string
+      operationId: archiveCampaign
+      tags:
+        - campaign
+      responses:
+        default:
+          $ref: '#/components/responses/ErrorResponse'
+  /campaigns/{campaignId}/unarchive:
+    post:
+      summary: 'Unarchive campaign'
+      description: ''
+      parameters:
+        - name: campaignId
+          in: path
+          description: Unique campaign identifier
+          required: true
+          schema:
+            type: string
+      operationId: unarchiveCampaign
+      tags:
+        - campaign
+      responses:
+        default:
+          $ref: '#/components/responses/ErrorResponse'
+
+  /campaigns/{campaignId}/items:
+    get:
+      summary: 'Get list of campaign items'
+      description: ''
+      tags:
+        - item
+      parameters:
+        - name: campaignId
+          in: path
+          description: Unique campaign identifier
+          required: true
+          schema:
+            type: string
+      operationId: getItems
+      responses:
+        default:
+          $ref: '#/components/responses/ErrorResponse'
+    post:
+      summary: 'Create campaign item'
+      description: ''
+      tags:
+        - item
+      operationId: createItem
+      parameters:
+        - name: campaignId
+          in: path
+          description: Unique campaign identifier
+          required: true
+          schema:
+            type: string
+      requestBody:
+        description: Item to create
+        $ref: '#/components/requestBodies/ItemCreateRequest'
+      responses:
+        '201':
+          description: Campaign item created (null response).
+        default:
+          description: Unexpected error
+          $ref: '#/components/responses/ErrorResponse'
+
+
+
 
 components:
   requestBodies:
     CampaignCreateRequest:
-      description: OK
+      description: Campaign to create
       required: true
       content:
         application/json:
           schema:
             $ref: '#/components/schemas/Campaign'
-  responses:
-    CampaignGetResponse:
-      description: OK
+    ItemCreateRequest:
+      description: Create campaign item
+      required: trie
       content:
         application/json:
           schema:
-            type: array
-            items:
-              $ref: '#/components/schemas/Campaign'
+            $ref: '#/components/schemas/Item'
+  responses:
+    CampaignGetResponse:
+      description: Campaign details
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/Campaign'
     CampaignListResponse:
-      description: OK
+      description: List of campaigns
       content:
         application/json:
           schema:
@@ -126,7 +210,7 @@ components:
             items:
               $ref: '#/components/schemas/Campaign'
     ErrorResponse:
-      description: Error
+      description: Unexpected error
       content:
         application/json:
           schema:
@@ -152,6 +236,16 @@ components:
         name:
           type: string
           description: name of the campaign
+    Item:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int32
+          description: unique item identifier
+        name:
+          type: string
+          description: caption of the campaign item
 
   securitySchemes: {}
   links: {}
